--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -53,9 +53,15 @@ Vagrant.configure("2") do |config|
       sudo apt-get update
       sudo apt-get install -y ansible sshpass
       sudo ssh-keygen -t rsa -N '' -f ~/.ssh/id_rsa
-    # Configurando o Ansible para acessar máquinas1 e máquinas2 por chave SSH
-      sshpass -p "vagrant" ssh-copy-id -o StrictHostKeyChecking=no 10.0.0.11
-      sshpass -p "vagrant" ssh-copy-id -o StrictHostKeyChecking=no 10.0.0.12
     SHELL
+    (1..2).each do |i|
+      ansible.vm.provision "shell", inline: <<-SHELL
+      # Configurando o Ansible para acessar máquinas1 e máquinas2 por chave SSH
+        sshpass -p "vagrant" ssh-copy-id -o StrictHostKeyChecking=no 10.0.0.#{i + 10}
+      # Restaurando conexão ssh somente por chave
+        sudo ssh 10.0.0.#{i + 10} "sed -i 's/^PermitRootLogin yes/PermitRootLogin without-password/' /etc/ssh/sshd_config"
+        sudo ssh 10.0.0.#{i + 10} "service ssh restart"
+      SHELL
+    end
   end
 end
